<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/length_button"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:id="@+id/length_display"
            android:textSize="17sp"
            android:text="@string/length"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:layout_weight="0.5"
                android:text="@string/search"
                />
        </LinearLayout>

        <com.jaygoo.widget.RangeSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/range_progress_seek_bar"
            app:rsb_indicator_show_mode="alwaysShow"
            app:rsb_indicator_width="20dp"
            app:rsb_indicator_height="20dp"
            app:rsb_indicator_text_size="20sp"
            app:rsb_indicator_background_color="#121212"
            app:rsb_indicator_radius="3dp"
            app:rsb_indicator_margin="10dp"
            app:rsb_mode="range"
            app:rsb_gravity="center"
            app:rsb_progress_height="4dp"
            app:rsb_progress_color="#808080"
            app:rsb_progress_default_color="#f1f1f1"
            app:layout_constraintTop_toBottomOf="@+id/length_button"
            app:layout_constraintStart_toStartOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/check_list"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/range_progress_seek_bar"
            app:layout_constraintStart_toStartOf="parent">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">
            <RadioButton
                android:id="@+id/onlyFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/only_favorite"
                android:layout_weight="1"
                android:onClick="onCheckboxClicked"/>
            <RadioButton
                android:id="@+id/withoutFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/without_favorite"
                android:gravity="center"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/none_favorite"
                android:layout_weight="1"/>
            </RadioGroup>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>