<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".ui.main.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/loading"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintBottom_toTopOf="@+id/waiting_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waiting_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="21sp"
        android:padding="20sp"
        android:gravity="center"
        android:text="@string/waitingDisp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/attention_sound"
        app:layout_constraintTop_toBottomOf="@id/waiting_display"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="21sp"
        android:textColor="@color/colorAlert"
        android:padding="20sp"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/attentionSound"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:id="@+id/game_start_button"
        android:text="@string/gameStart"
        app:layout_constraintTop_toBottomOf="@+id/attention_sound"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
