<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="data" type="com.rapdict.takuro.rapdict.gameSetting.GameSettingViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/min_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            android:padding="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:textSize="30sp"
                android:text="@string/min_length"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/max_layout"
            app:layout_constraintTop_toBottomOf="@+id/min_layout"
            android:layout_margin="20dp"
            android:padding="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:textSize="30sp"
                android:text="@string/max_length"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_layout"
            app:layout_constraintTop_toBottomOf="@+id/max_layout"
            android:layout_margin="20dp"
            android:padding="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:textSize="30sp"
                android:text = "@string/question_num"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dict_layout"
            app:layout_constraintTop_toBottomOf="@+id/question_layout"
            android:layout_margin="20dp"
            android:padding="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:textSize="30sp"
                android:text = "@string/dict_type"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/dict_layout"
            android:text="開始"/>
        


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>